--- a/package.json
+++ b/package.json
@@ -13,13 +13,17 @@
     "@react-navigation/bottom-tabs": "^7.4.5",
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/stack": "^7.4.5",
+    "@tanstack/react-query": "^5.84.1",
+    "axios": "^1.11.0",
     "expo": "~53.0.20",
+    "expo-constants": "^17.1.7",
     "expo-haptics": "^14.1.4",
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
     "react-native": "0.79.5",
-    "react-native-safe-area-context": "^5.5.2",
-    "react-native-screens": "^4.13.1",
+    "react-native-dotenv": "^3.4.11",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "~4.11.1",
     "zustand": "^5.0.7"
   },
   "devDependencies": {
