--- a/package.json
+++ b/package.json
@@ -9,27 +9,28 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/vector-icons": "^14.1.0",
+    "@expo/vector-icons": "^15.0.2",
     "@react-navigation/bottom-tabs": "^7.4.5",
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/stack": "^7.4.5",
     "@tanstack/react-query": "^5.84.1",
     "axios": "^1.11.0",
-    "expo": "~53.0.20",
-    "expo-constants": "^17.1.7",
-    "expo-haptics": "^14.1.4",
-    "expo-status-bar": "~2.2.3",
-    "react": "19.0.0",
-    "react-native": "0.79.5",
+    "expo": "~54.0.0",
+    "expo-constants": "~18.0.9",
+    "expo-haptics": "~15.0.7",
+    "expo-status-bar": "~3.0.8",
+    "react": "19.1.0",
+    "react-native": "0.81.4",
     "react-native-dotenv": "^3.4.11",
-    "react-native-safe-area-context": "5.4.0",
-    "react-native-screens": "~4.11.1",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0",
     "zustand": "^5.0.7"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
-    "@types/react": "~19.0.10",
-    "typescript": "~5.8.3"
+    "@types/react": "~19.1.10",
+    "babel-preset-expo": "^54.0.4",
+    "typescript": "~5.9.2"
   },
   "private": true
 }
