--- a/package.json
+++ b/package.json
@@ -16,14 +16,18 @@
     "@react-navigation/stack": "^7.4.5",
     "@tanstack/react-query": "^5.84.1",
     "axios": "^1.11.0",
-    "expo": "54.0.23",
-    "expo-constants": "~18.0.10",
-    "expo-haptics": "~15.0.7",
-    "expo-status-bar": "~3.0.8",
+    "expo": "~54.0.30",
+    "expo-constants": "~18.0.12",
+    "expo-dev-client": "~6.0.20",
+    "expo-font": "~14.0.10",
+    "expo-haptics": "~15.0.8",
+    "expo-status-bar": "~3.0.9",
     "react": "19.1.0",
     "react-native": "0.81.5",
     "react-native-calendars": "^1.1313.0",
     "react-native-dotenv": "^3.4.11",
+    "react-native-gesture-handler": "~2.28.0",
+    "react-native-mmkv": "^4.1.0",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "zustand": "^5.0.7"
@@ -31,8 +35,11 @@
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/react": "~19.1.10",
-    "babel-preset-expo": "^54.0.4",
+    "babel-preset-expo": "~54.0.9",
     "typescript": "~5.9.2"
+  },
+  "overrides": {
+    "react-native-safe-area-context": "~5.6.0"
   },
   "private": true
 }
